Filling out the game Area

--- a/AngularChatroom/ClientApp/src/app/game-lobby/game-lobby.component.html
+++ b/AngularChatroom/ClientApp/src/app/game-lobby/game-lobby.component.html
@@ -5,7 +5,7 @@
         <input *ngIf="isClientReady" type="button" id="update-name-button" value="Update Name" (click)="playerReady()" />
 
         <div *ngIf="isClientReady">
-            <p>{{clientPlayer.name}} is ready to start/p>
+            <p>{{clientPlayer.name}} is ready to start </p>
             <input type="button" id="start-button" value="Start Game" (click)="start()" />
         </div>
     </div>
