--- a/AngularChatroom/ClientApp/src/app/game-room/game-room.component.html
+++ b/AngularChatroom/ClientApp/src/app/game-room/game-room.component.html
@@ -1,9 +1,45 @@
 <div>
-    <p>GameRoom</p>
-    {{isGameInProgress}}
-    <ul class="game-players">
-        <li *ngFor="let player of gamePlayers">
-            {{player.name}}
-        </li>
-    </ul>
+    <div id="opponentSpace">
+        <p>Other Players</p>
+        <ul *ngIf="!isGameInProgress" class="game-players">
+            <li *ngFor="let player of gamePlayers">
+                {{player.name}}
+            </li>
+        </ul>
+
+        <ul *ngIf="isGameInProgress" class="game-players">
+            <li *ngFor="let player of gamePlayers">
+                {{player.name}} - {{player.stackAmount.toString()}}
+            </li>
+        </ul>
+    </div>
+    
+    <div id="clientUserGameArea" *ngIf="isGameInProgress && client">
+        <div id="clientStackArea">
+            <p>Your stack:</p>
+
+            <ul>
+                <li *ngFor="let card of client.stack">
+                    {{card.toString()}}
+                </li>
+            </ul>
+        </div>
+
+        <div id="playerBiddingArea">
+            <p>Bidding Info:</p>
+            <p>{{client.bid}}</p>
+            <p>{{client.hasPassedBidding}}</p>
+        </div>
+
+        <div id="playerHandArea">
+            <p>Your hand:</p>
+            <ul>
+                <li *ngFor="let card of client.hand">
+                    {{card.toString()}}
+                </li>
+            </ul>
+        </div>
+        
+        <p>Your Wins: {{client.winCount}}</p>
+    </div>
 </div>
