--- a/AngularChatroom/ClientApp/src/app/game-room/game-room.component.html
+++ b/AngularChatroom/ClientApp/src/app/game-room/game-room.component.html
@@ -3,7 +3,10 @@
         <p>Other Players</p>
         <ul *ngIf="!isGameInProgress" class="game-players">
             <li *ngFor="let player of gamePlayers">
-                {{player.name}}
+                <div class="list-item"
+                     *ngIf="player.id === client.id">{{player.name}} - (you)</div>
+                <div class="list-item"
+                     *ngIf="player.id !== client.id">{{player.name}}</div>
             </li>
         </ul>
 
