Creating new components to handle the different display areas: Client-action holds all the cards and moves that the client player can make player-mat shows all the relevant player information, stack, bids and player name.
Other changes include creating the game room only once players have started the game, this solved a bunch of problems quickly.

--- a/AngularChatroom/ClientApp/src/app/game-lobby/game-lobby.component.html
+++ b/AngularChatroom/ClientApp/src/app/game-lobby/game-lobby.component.html
@@ -10,7 +10,7 @@
 
         <ul *ngIf="!isGameInProgress" class="game-players">
             <li *ngFor="let player of readyPlayers"
-                [ngClass]="player.id == client.id ? 'client' : ''">
+                [ngClass]="player.id == clientPlayer.id ? 'client' : ''">
                 <div class="list-item"
                      *ngIf="player.id === clientPlayer.id">{{player.name}} - (you)</div>
                 <div class="list-item"
@@ -19,7 +19,8 @@
         </ul>
     </div>
                     
-    <app-game-room [client]="clientPlayer"
+    <app-game-room *ngIf="hasGameStarted"
+                   [client]="clientPlayer"
                    [joiningPlayer]="newPlayer"
                    [isGameInProgress]="hasGameStarted">
     </app-game-room>
