--- a/AngularChatroom/ClientApp/src/app/game-lobby/game-lobby.component.html
+++ b/AngularChatroom/ClientApp/src/app/game-lobby/game-lobby.component.html
@@ -18,7 +18,7 @@
             </li>
         </ul>
     </div>
-                    
+                 {{hasGameStarted}}   
     <app-game-room *ngIf="hasGameStarted"
                    [client]="clientPlayer"
                    [joiningPlayer]="newPlayer"
