Each player component handles and reflects who's turn it is.

--- a/AngularChatroom/ClientApp/src/app/game-room/client-action/client-action.component.html
+++ b/AngularChatroom/ClientApp/src/app/game-room/client-action/client-action.component.html
@@ -1,14 +1,14 @@
 <div class="client-action-component">
     <player-mat [player]="player"></player-mat>
 
-    <div id="playerActionsArea">
+    <div id="playerActionsArea" [ngClass]="isClientTurn ? 'active-player' : ''">
         <p>Your hand:</p>
         <ul>
             <li *ngFor="let card of player.hand">
                 {{card.toString()}}
             </li>
         </ul>
-        <ul id="action-buttons">
+        <ul id="action-buttons" *ngIf="isClientTurn">
             <li>
                 <button (click)="endTurn()">End Turn</button>
             </li>
