--- a/AngularChatroom/ClientApp/src/app/game-room/game-room.component.html
+++ b/AngularChatroom/ClientApp/src/app/game-room/game-room.component.html
@@ -1,9 +1,12 @@
 <div>
     <div id="opponentSpace">        
         <div *ngIf="isGameInProgress" class="game-players">
-            <player-mat *ngFor="let player of nonClientPlayers" [player]="player">
+            <player-mat *ngFor="let player of nonClientPlayers"
+                        [player]="player"
+                        [isPlayersTurn]="player.id === currentTurnPlayerId">
             </player-mat>
         </div>
     </div>
-    <client-action [player]="client"></client-action>
+    <client-action [player]="client"
+                   [isClientTurn]="client.id === currentTurnPlayerId"></client-action>
 </div>
