Some clean up and better code practises

--- a/AngularChatroom/ClientApp/src/app/game-room/client-action/client-action.component.html
+++ b/AngularChatroom/ClientApp/src/app/game-room/client-action/client-action.component.html
@@ -5,7 +5,7 @@
         <p>Your hand:</p>
         <ul>
             <li *ngFor="let card of player.hand">
-                {{card.toString}} <button (click)="playCard(card)">Play</button>
+                {{card.toString}} <button *ngIf="isClientTurn" (click)="playCard(card)">Play</button>
             </li>
         </ul>
         <ul id="action-buttons" *ngIf="isClientTurn">
