Investigating non-client player bugs, and simplifying game code a bit.
Non clients weren't able to use player objects due to soft copies being sent through the event hub. Removing current attributes from player objects and will start refactoring game state objects.

--- a/AngularChatroom/ClientApp/src/app/game-room/client-action/client-action.component.html
+++ b/AngularChatroom/ClientApp/src/app/game-room/client-action/client-action.component.html
@@ -1,10 +1,10 @@
 <div class="client-action-component">
-    <player-mat [player]="player"></player-mat>
+    <player-mat [player]="client"></player-mat>
 
     <div id="playerActionsArea" [ngClass]="isClientTurn ? 'active-player' : ''">
         <p>Your hand:</p>
         <ul>
-            <li *ngFor="let card of player.hand">
+            <li *ngFor="let card of client.hand">
                 {{card.toString}} <button *ngIf="isClientTurn" (click)="playCard(card)">Play</button>
             </li>
         </ul>
@@ -15,5 +15,5 @@
         </ul>
     </div>
 
-    <p>Your Wins: {{player.winCount}}</p>
+    <p>Your Wins: {{client.winCount}}</p>
 </div>
