--- a/AngularChatroom/ClientApp/src/app/game-room/game-room.component.html
+++ b/AngularChatroom/ClientApp/src/app/game-room/game-room.component.html
@@ -7,6 +7,6 @@
             </player-mat>
         </div>
     </div>
-    <client-action [player]="client"
+    <client-action [client]="client"
                    [isClientTurn]="client.id === currentTurnPlayerId"></client-action>
 </div>
