--- a/AngularChatroom/ClientApp/src/app/game-room/client-action/client-action.component.html
+++ b/AngularChatroom/ClientApp/src/app/game-room/client-action/client-action.component.html
@@ -8,11 +8,15 @@
                 {{card.toString}} <button *ngIf="isClientTurn" (click)="playCard(card)">Play</button>
             </li>
         </ul>
-        <ul id="action-buttons" *ngIf="isClientTurn">
-            <li>
-                <button (click)="endTurn()">End Turn</button>
-            </li>
-        </ul>
+        <div id="action-buttons" *ngIf="isClientTurn">
+            <div id="bidding-area">
+                <input type="number" name="bid-input" id="bid-input" [(ngModel)]="clientBid">
+                <button id="raise-bid-button" (click)="makeABid()">Submit Bid</button>
+                <button id="pass-bid-button" (click)="passBid()">Pass Bidding</button>
+            </div>
+            <button (click)="completeChallenge()">Start Challenge</button>
+            <button (click)="endTurn()">End Turn</button>
+        </div>
     </div>
 
     <p>Your Wins: {{client.winCount}}</p>
