Hooking up the game phases service

--- a/AngularChatroom/ClientApp/src/app/game-room/game-room.component.html
+++ b/AngularChatroom/ClientApp/src/app/game-room/game-room.component.html
@@ -1,4 +1,5 @@
 <div>
+    {{gamePhase}}
     <div id="opponentSpace">        
         <div class="game-players">
             <player-mat *ngFor="let player of nonClientPlayers"
