--- a/AngularChatroom/ClientApp/src/app/game-room/game-room.component.html
+++ b/AngularChatroom/ClientApp/src/app/game-room/game-room.component.html
@@ -8,5 +8,6 @@
         </div>
     </div>
     <client-action [client]="client"
-                   [isClientTurn]="client.id === currentTurnPlayerId"></client-action>
+                   [isClientTurn]="client.id === currentTurnPlayerId"
+                   [gamePhase]="gamePhase"></client-action>
 </div>
