Adding features to reset the game round, setting up to start the challenge functions
The big one! Very messy, required a bit of refactoring to work correctly (as per the previous 5 commits)

--- a/AngularChatroom/ClientApp/src/app/game-room/client-action/client-action.component.html
+++ b/AngularChatroom/ClientApp/src/app/game-room/client-action/client-action.component.html
@@ -17,7 +17,7 @@
                 <button id="raise-bid-button" (click)="makeABid()">Submit Bid</button>
                 <button id="pass-bid-button" (click)="passBid()">Pass Bidding</button>
             </div>
-            <button *ngIf="gamePhase == challengePhase && !client.hasPassedBidding" (click)="completeChallenge()">Start Challenge</button>
+            <button *ngIf="gamePhase == challengePhase && !client.hasPassedBidding" (click)="startChallenge()">Start Challenge</button>
             <button *ngIf="gamePhase == playCardsPhase" (click)="endTurn()">End Turn</button>
         </div>
     </div>
