Created Game State Component
To explain what's going on and when

--- a/AngularChatroom/ClientApp/src/app/game-room/game-room.component.html
+++ b/AngularChatroom/ClientApp/src/app/game-room/game-room.component.html
@@ -1,4 +1,7 @@
 <div>
+    <div id="gameStateArea">
+        <game-state-component></game-state-component>
+    </div>
     <div id="opponentSpace">        
         <div class="game-players">
             <player-mat *ngFor="let player of nonClientPlayers"
