Hooking up the gamestate component to the rest of the game
Also fixed up an simplified some of the player service functions and game service functions

--- a/AngularChatroom/ClientApp/src/app/game-room/game-room.component.html
+++ b/AngularChatroom/ClientApp/src/app/game-room/game-room.component.html
@@ -1,6 +1,6 @@
 <div>
     <div id="gameStateArea">
-        <game-state-component></game-state-component>
+        <game-state-component [gamePhase]="gamePhase"></game-state-component>
     </div>
     <div id="opponentSpace">        
         <div class="game-players">
