Players can reveal their cards, game keeps track of highest bid and the cards needed to reveal

--- a/AngularChatroom/ClientApp/src/app/game-room/client-action/client-action.component.html
+++ b/AngularChatroom/ClientApp/src/app/game-room/client-action/client-action.component.html
@@ -20,6 +20,7 @@
             <button *ngIf="gamePhase == challengePhase && !client.hasPassedBidding" (click)="startChallenge()">Start Challenge</button>
             <button *ngIf="gamePhase == playCardsPhase" (click)="endTurn()">End Turn</button>
         </div>
+        <button (click)="revealCard()">Reveal your card</button>
     </div>
 
     <p>Your Wins: {{client.winCount}}</p>
