Players can now requests players to reveal their cards.

--- a/AngularChatroom/ClientApp/src/app/game-room/player-mat/player-mat.component.html
+++ b/AngularChatroom/ClientApp/src/app/game-room/player-mat/player-mat.component.html
@@ -6,4 +6,5 @@
     <div class="player-info">
         <p>{{player.name}}</p>
     </div>
+    <button (click)="revealCard()">reveal top card</button>
 </div>
