--- a/AngularChatroom/ClientApp/src/app/game-room/player-mat/player-mat.component.html
+++ b/AngularChatroom/ClientApp/src/app/game-room/player-mat/player-mat.component.html
@@ -6,5 +6,7 @@
     <div class="player-info">
         <p>{{player.name}}</p>
     </div>
-    <button (click)="revealCard()">reveal top card</button>
+    <button
+    *ngIf="showCardRevealButton"
+    (click)="revealCard()">reveal top card</button>
 </div>
