--- a/AngularChatroom/ClientApp/src/app/game-room/client-action/client-action.component.html
+++ b/AngularChatroom/ClientApp/src/app/game-room/client-action/client-action.component.html
@@ -17,10 +17,10 @@
                 <button id="raise-bid-button" (click)="makeABid()">Submit Bid</button>
                 <button id="pass-bid-button" (click)="passBid()">Pass Bidding</button>
             </div>
-            <button *ngIf="gamePhase == challengePhase && !client.hasPassedBidding" (click)="startChallenge()">Start Challenge</button>
             <button *ngIf="gamePhase == playCardsPhase" (click)="endTurn()">End Turn</button>
         </div>
-        <button (click)="revealCard()">Reveal your card</button>
+        <button *ngIf="gamePhase == challengePhase && !client.hasPassedBidding && client.cardsPlayed > 0" (click)="revealCard()">Reveal your card</button>
+        <button *ngIf="gamePhase == challengePhase && !client.hasPassedBidding" (click)="startNewRound()">Start New Round</button>
     </div>
 
     <p>Your Wins: {{client.winCount}}</p>
