More player messaging for round complete

--- a/AngularChatroom/ClientApp/src/app/game-room/game-room.component.html
+++ b/AngularChatroom/ClientApp/src/app/game-room/game-room.component.html
@@ -13,5 +13,8 @@
     </div>
     <client-action [client]="client"
                    [isClientTurn]="client.id === currentTurnPlayerId"
-                   [gamePhase]="gamePhase"></client-action>
+                   [gamePhase]="gamePhase"
+                   [maxBid]="maxBid"
+                   [highestBid]="highestBid"
+                   ></client-action>
 </div>
